lab2/src/main/java/SysYParser.g4
parser grammar SysYParser;

options {
    tokenVocab = SysYLexer;
}

program
   : compUnit
   ;
compUnit
   : (funcDef | decl)+ EOF
   ;

decl
    : constDecl
    | varDecl
    ;

constDecl
    : 'const' bType constDef (',' constDef)* ';'
    ;

bType
    : 'int'
    ;

constDef
    : IDENT ('[' constExp ']')* '=' constInitVal
    ;

constInitVal
    : constExp
    | '{' (constInitVal (','constInitVal)* )? '}';

varDecl
    : bType varDef (',' varDef)* ';'
    ;

varDef
    : IDENT  ( '[' constExp ']' )*
    | IDENT ( '[' constExp ']' )* '=' initVal
    ;

initVal
    :exp
    | '{' ( initVal ( ',' initVal )* )? '}'
    ;

funcDef
    :funcType IDENT '(' (funcFParams)? ')' block
    ;

funcType
    :'void'
    |'int'
    ;

funcFParams
    : funcFParam ( ',' funcFParam )*
    ;

funcFParam
    :bType IDENT ('[' ']' ( '[' exp ']' )* )?
    ;

block
    :'{' ( blockItem )* '}'
    ;

blockItem
    : decl
    | stmt
    ;

stmt
    :lVal '=' exp ';'
    | exp? ';'
    | block
    | 'if' '(' cond ')' stmt ( 'else' stmt )?
    | 'while' '(' cond ')' stmt
    | 'break' ';'
    | 'continue' ';'
    | 'return' exp? ';'
    ;

exp
   : L_PAREN exp R_PAREN #expParenthesis
   | lVal #lvalExp
   | number #numberExp
   | IDENT L_PAREN funcRParams? R_PAREN #callFuncExp
   | unaryOp exp #unaryOpExp
   | exp (MUL | DIV | MOD) exp #mulExp
   | exp (PLUS | MINUS) exp #plusExp
   ;

cond
   : exp #expCond
   | cond (LT | GT | LE | GE) cond #ltCond
   | cond (EQ | NEQ) cond #eqCond
   | cond AND cond #andCond
   | cond OR cond #orCond
   ;

lVal
   : IDENT (L_BRACKT exp R_BRACKT)*
   ;

number
   : INTEGR_CONST
   ;

unaryOp
   : PLUS
   | MINUS
   | NOT
   ;

funcRParams
   : param (COMMA param)*
   ;

param
   : exp
   ;

constExp
   : exp
   ;
